# TT_IngestionLayer

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  PROGRESS.md  README.md  WINDOWS_CHEATSHEET.md  WINDOWS_FIXES.md  WINDOWS_QUICKSTART.md  output_email_message_model.yaml  producer.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  verify_phase3.py  worker.py
config/: __init__.py  grafana_dashboard.json  prometheus.yml  settings.py
docs/: OAUTH2_SETUP.md  OUTLOOK_OAUTH2_SETUP.md  WORKER_README.md  project_brainstorming_and_SOP.md
docs/runbooks/: dlq_management.md  incident_response.md  redis_operations.md  scaling.md  troubleshooting.md
scripts/: README.md  backup.py  dev.ps1  health_check.ps1  health_check.sh  oauth-setup.ps1  quick-start.ps1  restore.py  setup.ps1  start.ps1  start.sh  start_producer.sh  start_worker.sh  stop.ps1  stop.sh  test.ps1
src/auth/: __init__.py  oauth2_gmail.py  oauth2_outlook.py
src/common/: batch.py  circuit_breaker.py  correlation.py  exceptions.py  health.py  logging_config.py  redis_client.py  retry.py  secrets.py  shutdown.py
src/imap/: __init__.py  imap_client.py  outlook_imap_client.py
src/monitoring/: __init__.py  metrics.py
src/producer/: state_manager.py
src/worker/: __init__.py  backoff.py  dlq.py  idempotency.py  processor.py  recovery.py
tests/integration/: test_end_to_end.py
tests/load/: load_test.py
tests/unit/: test_backoff.py  test_backup.py  test_batch.py  test_circuit_breaker.py  test_correlation.py  test_dlq.py  test_health.py  test_idempotency.py  test_imap_client.py  (+15 more)
