[project]
name = "tt-ingestion-layer"
version = "1.0.0"
description = "Email Ingestion System — Gmail IMAP to Redis Streams"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100
